[tool.poetry]
name = "kyujipy"
version = "0.1.0"
description = "kyujipy"
authors = ["Emmanuel Ternon <emmanuel.ternon@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "1.4.4"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2021.5.30"
chardet = "4.0.0"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
cson = "0.8"
distlib = "0.3.2"
filelock = "3.0.12"
html5lib = "1.1"
idna = "2.10"
importlib-metadata = "1.7.0"
keyring = "21.8.0"
lockfile = "0.12.2"
msgpack = "1.0.2"
nose = "1.3.7"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.7.0"
poetry = "1.1.6"
poetry-core = "1.0.3"
ptyprocess = "0.7.0"
pylev = "1.4.0"
pyparsing = "2.4.7"
requests = "2.25.1"
requests-toolbelt = "0.9.1"
shellingham = "1.4.0"
six = "1.16.0"
speg = "0.3"
tomlkit = "0.7.2"
urllib3 = "1.26.5"
virtualenv = "20.4.7"
webencodings = "0.5.1"
zipp = "3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
